[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/userUnit.gd" type="Script" id=1]
[ext_resource path="res://src/UI/misc/unitInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/user/apc.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/characters/user/infantry.tscn" type="PackedScene" id=4]

[node name="userUnit" type="Node2D"]
script = ExtResource( 1 )

[node name="timers" type="Node2D" parent="."]

[node name="reloadTimer" type="Timer" parent="timers"]

[node name="fireRateTimer" type="Timer" parent="timers"]

[node name="apc" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 3, 3 )

[node name="infantry" parent="." instance=ExtResource( 4 )]
visible = false
rotation = -1.5708
scale = Vector2( 3, 3 )

[node name="unitInfo" parent="." instance=ExtResource( 2 )]
margin_left = -48.0
margin_top = -128.0
margin_right = 52.0
margin_bottom = -91.0

[connection signal="timeout" from="timers/fireRateTimer" to="." method="_on_fireRateTimer_timeout"]
